nicknamer/server/lib/tests/snapshots/auth_endpoints_tests__api__v1__can_reject_invalid_credentials_via_json_api.snap
---
source: nicknamer/server/tests/auth_endpoints_tests.rs
expression: snapshot_data
---
status: 401
headers:
  content-type: application/json
body:
  error: INVALID_CREDENTIALS
  message: Invalid username or password
test_name: json_api_reject_invalid_credentials
