nicknamer/server/lib/tests/snapshots/auth_endpoints_tests__api__v1__can_reject_requests_with_invalid_bearer_token.snap
---
source: nicknamer/server/tests/auth_endpoints_tests.rs
expression: snapshot_data
---
status: 401
headers:
  content-type: application/json
body:
  error: UNAUTHORIZED
  message: Authentication required to access this resource
test_name: json_api_reject_requests_with_invalid_bearer_token
